<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/action_search"
    android:title="@string/action_search"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:checkable="true"
        android:checked="true"
        android:id="@+id/action_show_allcoins"
        android:orderInCategory="101"
        android:title="@string/action_show_allcoins"
        app:showAsAction="never" />
    <item
        android:checkable="true"
        android:id="@+id/action_show_stablecoins"
        android:orderInCategory="101"
        android:title="@string/action_show_stablecoins"
        app:showAsAction="never" />
    <item
        android:checkable="true"
        android:id="@+id/action_show_not_stablecoins"
        android:orderInCategory="101"
        android:title="@string/action_show_not_stablecoins"
        app:showAsAction="never" />
</menu>